--- a/packages/google_maps_flutter/google_maps_flutter/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter/pubspec.yaml
@@ -21,10 +21,22 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter_android: ^2.7.0
-  google_maps_flutter_ios: ^2.5.0
-  google_maps_flutter_platform_interface: ^2.5.0
-  google_maps_flutter_web: ^0.5.6
+  google_maps_flutter_android:
+    git:
+      url: https://github.com/Film-Point/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_android
+  google_maps_flutter_ios:
+    git:
+      url: https://github.com/Film-Point/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_ios
+  google_maps_flutter_platform_interface:
+    git:
+      url: https://github.com/Film-Point/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_platform_interface
+  google_maps_flutter_web:
+    git:
+      url: https://github.com/Film-Point/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_web
 
 dev_dependencies:
   flutter_test:
